--- a/package.json
+++ b/package.json
@@ -5,25 +5,27 @@
   "type": "module",
   "main": "dist/index.js",
   "module": "dist/index.esm.js",
+  "types": "types/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.js",
-      "require": "./dist/index.cjs"
+      "require": "./dist/index.cjs",
+      "types": "./types/index.d.ts"
     }
   },
   "files": [
     "dist",
+    "types",
     "src",
     "README.md",
     "LICENSE"
   ],
   "scripts": {
+    "clean": "rimraf dist",
     "build": "rollup -c",
     "build:cjs": "rollup -c rollup.cjs.config.js",
     "build:all": "npm run build && npm run build:cjs",
-    "dev": "rollup -c -w",
-    "test": "jest",
-    "prepublishOnly": "npm run build:all"
+    "prepublishOnly": "npm run clean && npm run build:all"
   },
   "keywords": [
     "logger",
@@ -39,10 +41,11 @@
     "security",
     "visual",
     "javascript",
+    "typescript",
     "es5",
     "es6"
   ],
-  "author": "Your Name",
+  "author": "Aeon",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -53,16 +56,25 @@
   },
   "homepage": "https://github.com/Aeon-San/logyo#readme",
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.0.0"
   },
   "devDependencies": {
-    "rollup": "^4.0.0",
-    "@rollup/plugin-babel": "^6.0.0",
-    "@rollup/plugin-node-resolve": "^15.0.0",
-    "@rollup/plugin-commonjs": "^25.0.0",
-    "@babel/core": "^7.22.0",
-    "@babel/preset-env": "^7.22.0",
-    "jest": "^29.0.0"
+    "@babel/core": "^7.27.4",
+    "@babel/plugin-proposal-class-properties": "^7.18.0",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.0",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
+    "@babel/preset-env": "^7.27.2",
+    "@rollup/plugin-babel": "^6.0.4",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@rollup/plugin-node-resolve": "^15.3.1",
+    "@types/node": "^20.10.0",
+    "core-js": "^3.33.0",
+    "jest": "^29.7.0",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.41.1"
+  },
+  "peerDependencies": {
+    "chalk": "^5.0.0"
   },
   "engines": {
     "node": ">=14.0.0"
